--- a/app/views/pages/login.html
+++ b/app/views/pages/login.html
@@ -1,26 +1,21 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-4 col-md-offset-4">
+        <div class="col-md-12">
             <div class="login-panel panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title">Please Sign In</h3>
+                    <h3 class="panel-title"><span><img src="../imagenes/favicon.png"> ENERGYAPP</span></h3>
                 </div>
                 <div class="panel-body">
-                    <form role="form">
+                    <form ng-submit="vm.login()" method="post">
                         <fieldset>
                             <div class="form-group">
-                                <input class="form-control" placeholder="E-mail" name="email" type="email" autofocus>
+                                <input class="form-control" placeholder="E-mail" name="email" ng-model="vm.email" type="email" autofocus>
                             </div>
                             <div class="form-group">
-                                <input class="form-control" placeholder="Password" name="password" type="password" value="">
-                            </div>
-                            <div class="checkbox">
-                                <label>
-                                    <input name="remember" type="checkbox" value="Remember Me">Remember Me
-                                </label>
+                                <input class="form-control" placeholder="Password" name="password" ng-model="vm.password" type="password" value="">
                             </div>
                             <!-- Change this to a button or input when using this as a form -->
-                            <a ui-sref="dashboard.home" class="btn btn-lg btn-success btn-block">Login</a>
+                            <button  type="submit" class="navbar-default btn btn-lg btn-success btn-block" >Entrar</button>
                         </fieldset>
                     </form>
                 </div>
