--- a/app/views/chart.html
+++ b/app/views/chart.html
@@ -42,7 +42,7 @@
         <div class="panel panel-success">
             <div class="panel-heading">{{ vm.title_1}}</div>
             <div class="panel-body">
-                <canvas id="vm.line" class="chart chart-line chart-xl" data="vm.line.data" labels="vm.line.labels"
+                <canvas id="vm.line" class="chart chart-line chart-xl" data="vm.line.data" update="vm.line.update" labels="vm.line.labels"
                         click="vm.line.onClick"></canvas>
             </div>
         </div>
