--- a/app/views/login.html
+++ b/app/views/login.html
@@ -3,11 +3,11 @@
     <div class="row">
         <div class="col-md-12">
             <div class="login-panel panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title"><span><img src="./imagenes/favicon.png"> ENERGYAPP</span></h3>
+                <div class="panel-panel-success ">
+                    <h3 class="panel-title"><span><img src="./imagenes/favicon.png"><span>NNNUnicesar</span> </span></h3>
                 </div>
                 <div class="panel-body">
-                    <form ng-submit="vm.login()" method="post">
+                    <form>
                         <fieldset>
                             <div class="form-group">
                                 <input class="form-control" placeholder="E-mail" name="email" ng-model="vm.email"
@@ -18,7 +18,7 @@
                                        ng-model="vm.password" type="password" value="">
                             </div>
                             <!-- Change this to a button or input when using this as a form -->
-                            <button type="submit" class="navbar-default btn btn-lg btn-success btn-block">Entrar
+                            <button ui-sref="dashboard.inicio" class="navbar-default btn btn-lg btn-success btn-block">Entrar
                             </button>
                         </fieldset>
                     </form>
