--- a/app/views/login.html
+++ b/app/views/login.html
@@ -11,7 +11,7 @@
                         <fieldset>
                             <div class="form-group">
                                 <input class="form-control" placeholder="E-mail" name="email" ng-model="vm.email"
-                                       type="email" autofocus>
+                                       type="email" pattern="[a-z0-9._%+-]+@[u][n][i][c][e][s][a][r]+\.[e][d][u]+\.[a-z]{2,3}$" autofocus>
                             </div>
                             <div class="form-group">
                                 <input class="form-control" placeholder="Password" name="password"
